--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,10 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <declare-styleable name="SpectrumView">
+        <attr name="rectangle_color" format="color" />
+        <attr name="rectangle_num" format="integer" />
+        <attr name="rectangle_width" format="float" />
+        <attr name="rectangle_speed" format="integer" />
+    </declare-styleable>
 </resources>
