--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,4 +56,8 @@
         app:rectangle_color="#FF6565"
         app:rectangle_width="5dp"
         app:rectangle_num="10"/>
+    <com.module.mp3recorder.widget.DoughnutProgress
+        android:id="@+id/doughnut_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
