--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,6 +61,7 @@
         app:rectangle_width="5dp" />
 
     <com.module.mp3recorder.widget.MicView
+        android:id="@+id/mic_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"></com.module.mp3recorder.widget.MicView>
 </LinearLayout>
