--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <com.ibbhub.mp3recorderlib.widget.SpectrumView
+    <com.ibbhub.mp3recorderlib.SpectrumView
         android:id="@+id/spectrum_view"
         android:layout_width="100dp"
         android:layout_height="40dp"
@@ -60,8 +60,8 @@
         app:rectangle_num="10"
         app:rectangle_width="5dp" />
 
-    <com.ibbhub.mp3recorderlib.widget.MicView
+    <com.ibbhub.mp3recorderlib.RecorderView
         android:id="@+id/mic_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"></com.ibbhub.mp3recorderlib.widget.MicView>
+        android:layout_height="wrap_content"></com.ibbhub.mp3recorderlib.RecorderView>
 </LinearLayout>
